force-app/main/default/objects/E_MOC_Attachment_Risk_analysis__c.object
<CustomObject>
    <fields>
        <fullName>Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>E_MOC_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-MOC Application</label>
        <referenceTo>E_MOC_Application__c</referenceTo>
        <relationshipLabel>E-MOC Attachment Risk analysis</relationshipLabel>
        <relationshipName>E_MOC_Attachment_Risk_analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E_MOC_Checklist_type__c</fullName>
        <label>E-MOC Checklist Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>E_MOC_Doc_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HAZOP Checklist</fullName>
                </value>
                <value>
                    <fullName>HRA Checklist</fullName>
                </value>
                <value>
                    <fullName>ENVI Impact Checklist</fullName>
                </value>
                <value>
                    <fullName>Reliability Checklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_MOC_Doc_Type__c</fullName>
        <label>E-MOC Doc Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Risk analysis</fullName>
                    <default>true</default>
                    <label>Risk analysis</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>E-MOC Attachment Risk analysis</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Doc Require-{0000000}</displayFormat>
        <label>Attachment No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>